--- a/client/package.json
+++ b/client/package.json
@@ -29,5 +29,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-adapter-azure-swa": "^0.20.0"
+	}
 }
