--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,9 @@
-{}
+{
+  "azureFunctions.deploySubpath": "client/build/server",
+  "azureFunctions.postDeployTask": "npm install (functions)",
+  "azureFunctions.projectLanguage": "JavaScript",
+  "azureFunctions.projectRuntime": "~4",
+  "debug.internalConsoleOptions": "neverOpen",
+  "azureFunctions.projectSubpath": "client/build/server",
+  "azureFunctions.preDeployTask": "npm prune (functions)"
+}
